Fixed some guidelines issues (reduced text and number of figures).

--- a/LaTeX files/bibliography.bib
+++ b/LaTeX files/bibliography.bib
@@ -1,28 +1,28 @@
 @article{3gpp2019study,
-	title={{``Study of Enablers for Network Automation for 5G"}},
-	author={3GPP TR 23.791 V16.2.0 (2019-06)},
+	title={{Study of Enablers for Network Automation for 5G}},
+	author= {{3GPP TR 23.791 V16.2.0 (2019-06)}},
 	journal={},
 	year={2019}
 }
 
 @article{etsi2019architecture,
-	title={{Draft ``Zero-touch network and Service Management (ZSM); Reference Architecture"}},
-	author={ETSI GS ZSM 002 V0.13.5 (2019-07)},
+	title={{Draft Zero-touch network and Service Management (ZSM); Reference Architecture}},
+	author={{ETSI GS ZSM 002 V0.13.5 (2019-07)}},
 	journal={},
 	year={2019}
 }
 
 @article{nekovee2019mobile,
 	title={{Is Mobile Network Future Already Written?}},
-	author={Maziar Nekovee, Dehao Wu, Yue Wang, Sachin Sharma, Avishek Nag},
+	author={{Maziar Nekovee, Dehao Wu, Yue Wang, Sachin Sharma, Avishek Nag}},
 	journal={ComSoc Technology News (CTN)},
 	year={2019}
 }
 
 @article{itu2019architecture,
-	title={{ITU-T Rec. Y.3172, ``Architectural framework for machine learning in future networks including IMT-2020", 2019}},
-	author={},
-	year={},
+	title={{Architectural framework for machine learning in future networks including IMT-2020}},
+	author={{ITU-T Rec. Y.3172}},
+	year={2019},
 	journal={},
 	publisher={ITU-T}
 }
@@ -44,8 +44,8 @@
 }
 
 @inproceedings{barrachina2019komondor,
-	title={{``Komondor: a Wireless Network Simulator for Next-Generation High-Density WLANs"}},
-	author={Sergio Barrachina-Mu{\~n}oz \textit{et al.}},
+	title={{Komondor: a Wireless Network Simulator for Next-Generation High-Density WLANs}},
+	author={{Sergio Barrachina-Mu{\~n}oz \textit{et al.}}},
 	booktitle={2019 Wireless Days (WD)},
 	pages={1--8},
 	year={2019},
@@ -53,8 +53,8 @@
 }
 
 @article{mitchell1997machine,
-	title={{``Machine learning"}},
-	author={Mitchell, Tom M and others},
+	title={{Machine learning}},
+	author={{Mitchell, Tom M and others}},
 	journal={Burr Ridge, IL: McGraw Hill},
 	volume={45},
 	number={37},
@@ -64,7 +64,7 @@
 
 @article{jiang2016machine,
 	title={{Machine learning paradigms for next-generation wireless networks}},
-	author={Chunxiao Jiang \textit{et al.}},
+	author={{Chunxiao Jiang \textit{et al.}}},
 	journal={IEEE Wireless Comm.},
 	volume={24},
 	number={2},
@@ -75,7 +75,7 @@
 
 @article{yau2012reinforcement,
 	title={{Reinforcement learning for context awareness and intelligence in wireless networks: Review, new features and open issues}},
-	author={Yau, Kok-Lim Alvin and Komisarczuk, Peter and Teal, Paul D},
+	author={{Yau, Kok-Lim Alvin and Komisarczuk, Peter and Teal, Paul D}},
 	journal={JNCA},
 	volume={35},
 	number={1},
@@ -85,16 +85,16 @@
 }
 
 @article{zhang2019deep,
-	title={{``Deep learning in mobile and wireless networking: A survey"}},
-	author={Zhang, Chaoyun and Patras, Paul and Haddadi, Hamed},
+	title={{Deep learning in mobile and wireless networking: A survey}},
+	author={{Zhang, Chaoyun and Patras, Paul and Haddadi, Hamed}},
 	journal={IEEE Comm. Surveys \& Tutorials},
 	year={2019},
 	publisher={IEEE}
 }
 
 @article{usama2019unsupervised,
-	title={{``Unsupervised machine learning for networking: Techniques, applications and research challenges"}},
-	author={Muhammad Usama \textit{et al.}},
+	title={{Unsupervised machine learning for networking: Techniques, applications and research challenges}},
+	author={{Muhammad Usama \textit{et al.}}},
 	journal={IEEE Access},
 	volume={7},
 	pages={65579--65615},
@@ -103,8 +103,8 @@
 }
 
 @article{chih2017big,
-	title={{``The Big-Data-Driven Intelligent Wireless Network: Architecture, Use Cases, Solutions, and Future Trends"}},
-	author={I Chih-Lin \textit{et al.}},
+	title={{The Big-Data-Driven Intelligent Wireless Network: Architecture, Use Cases, Solutions, and Future Trends}},
+	author={{I Chih-Lin \textit{et al.}}},
 	journal={IEEE Vehic. Tech. Magazine},
 	volume={12},
 	number={4},
@@ -114,8 +114,8 @@
 }
 
 @article{wang2018machine,
-	title={{``Machine learning for networking: Workflow, advances and opportunities"}},
-	author={Mowei Wang \textit{et al.}},
+	title={{Machine learning for networking: Workflow, advances and opportunities}},
+	author={{Mowei Wang \textit{et al.}}},
 	journal={IEEE Network},
 	volume={32},
 	number={2},
@@ -125,8 +125,8 @@
 }
 
 @article{han2017big,
-	title={{``Big data enabled mobile network design for 5g and beyond"}},
-	author={Shuangfeng Han\textit{ et al.}},
+	title={{Big data enabled mobile network design for 5g and beyond}},
+	author={{Shuangfeng Han\textit{ et al.}}},
 	journal={IEEE Comm. Magazine},
 	volume={55},
 	number={9},
@@ -136,8 +136,8 @@
 }
 
 @article{bi2015wireless,
-	title={{``Wireless communications in the era of big data"}},
-	author={Suzhi Bi \textit{et al.}},
+	title={{Wireless communications in the era of big data}},
+	author={{Suzhi Bi \textit{et al.}}},
 	journal={IEEE Comm. Magazine},
 	volume={53},
 	number={10},
@@ -147,8 +147,8 @@
 }
 
 @article{he2016big,
-	title={{``Big data analytics in mobile cellular networks"}},
-	author={Ying He \textit{et al.}},
+	title={{Big data analytics in mobile cellular networks}},
+	author={{Ying He \textit{et al.}}},
 	journal={IEEE Access},
 	volume={4},
 	pages={1985--1996},
@@ -157,8 +157,8 @@
 }
 
 @article{osseiran2014scenarios,
-	title={{``Scenarios for 5G mobile and wireless communications: the vision of the METIS project"}},
-	author={Afif Osseiran \textit{et al.}},
+	title={{Scenarios for 5G mobile and wireless communications: the vision of the METIS project}},
+	author={{Afif Osseiran \textit{et al.}}},
 	journal={IEEE Comm. Magazine},
 	volume={52},
 	number={5},
@@ -168,8 +168,8 @@
 }
 
 @article{lin2017deep,
-	title={{``Deep gradient compression: Reducing the communication bandwidth for distributed training"}},
-	author={Yujun Lin \textit{et al.}},
+	title={{Deep gradient compression: Reducing the communication bandwidth for distributed training}},
+	author={{Yujun Lin \textit{et al.}}},
 	journal={arXiv preprint arXiv:1712.01887},
 	year={2017}
 }
