Progress on the reviewed version of the manuscript + Code NN training + Update README

--- a/LaTeX files/bibliography.bib
+++ b/LaTeX files/bibliography.bib
@@ -12,13 +12,6 @@
 	year={2019}
 }
 
-@article{nekovee2019mobile,
-	title={{Is Mobile Network Future Already Written?}},
-	author={{Maziar Nekovee, Dehao Wu, Yue Wang, Sachin Sharma, Avishek Nag}},
-	journal={ComSoc Technology News (CTN)},
-	year={2019}
-}
-
 @article{itu2019architecture,
 	title={{Architectural framework for machine learning in future networks including IMT-2020}},
 	author={{ITU-T Rec. Y.3172}},
@@ -28,16 +21,16 @@
 }
 
 @article{itu2019use,
-	title={{ITU-T Y.ML-IMT2020-Use-Cases (TD407/WP1)}},
-	author={},
+	title={Machine learning in future networks including IMT-2020: use cases},
+	author={{ITU-T Supp. Y.Supp55}},
 	year={2019},
 	journal={},
 	publisher={}
 }
 
 @article{itu2019data,
-	title={{ITU-T Y.ML-IMT2020-Data-Handling (TD409/WP1)}},
-	author={},
+	title={{Framework for data handling to enable machine learning in future networks including IMT-2020}},
+	author={{ITU-T Rec. Y.3174}},
 	year={2019},
 	journal={},
 	publisher={}
