Update manuscript and README + arXiv files

--- a/LaTeX files/bibliography.bib
+++ b/LaTeX files/bibliography.bib
@@ -39,7 +39,7 @@
 @inproceedings{barrachina2019komondor,
 	title={{Komondor: a Wireless Network Simulator for Next-Generation High-Density WLANs}},
 	author={{Sergio Barrachina-Mu{\~n}oz \textit{et al.}}},
-	booktitle={2019 Wireless Days (WD)},
+	booktitle={Wireless Days},
 	pages={1--8},
 	year={2019},
 	organization={IEEE}
