Final version of the accepted manuscript.

--- a/LaTeX files/bibliography.bib
+++ b/LaTeX files/bibliography.bib
@@ -21,7 +21,7 @@
 }
 
 @article{itu2019use,
-	title={Machine learning in future networks including IMT-2020: use cases},
+	title={{Machine learning in future networks including IMT-2020: use cases}},
 	author={{ITU-T Supp. Y.Supp55}},
 	year={2019},
 	journal={},
@@ -81,6 +81,9 @@
 	title={{Deep learning in mobile and wireless networking: A survey}},
 	author={{Zhang, Chaoyun and Patras, Paul and Haddadi, Hamed}},
 	journal={IEEE Comm. Surveys \& Tutorials},
+	volume={21},
+	number={3},
+	pages={2224--2287},
 	year={2019},
 	publisher={IEEE}
 }
@@ -160,9 +163,10 @@
 	publisher={IEEE}
 }
 
-@article{lin2017deep,
-	title={{Deep gradient compression: Reducing the communication bandwidth for distributed training}},
+@inproceedings{lin2017deep,
+	title={{Deep Gradient Compression: Reducing the Communication Bandwidth for Distributed Training}},
 	author={{Yujun Lin \textit{et al.}}},
-	journal={arXiv preprint arXiv:1712.01887},
-	year={2017}
+	booktitle={ICLR},
+	year={2018; \url{{https://openreview.net/forum?id=SkhQHMW0W}}},
+	note= {accessed on Jan. 31, 2020}
 }
